Fixed heap space bug, fixed icfg creation in FastUPR